--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fseeklogo.com%2Fvector-logo%2F360624%2Fconselho-tutelar&psig=AOvVaw1J89Rw5bMIgag76PRhIDJ9&ust=1752435615629000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqGAoTCKDep86JuI4DFQAAAAAdAAAAABCMAQ", alt="Logo" class="w-90 h-90" >
+                <img src="https://images.seeklogo.com/logo-png/36/2/conselho-tutelar-logo-png_seeklogo-360624.png", alt="Logo" class="w-90 h-90" >
             </div>
 
         </div>
