--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://images.seeklogo.com/logo-png/36/2/conselho-tutelar-logo-png_seeklogo-360624.png", alt="Logo" class="w-90 h-90" >
+                <img src="https://drive.google.com/file/d/11L9ilnYVTxTcy0nYCV3acmxE7Y0082vH/view?usp=drive_link", alt="Logo" class="w-90 h-90" >
             </div>
 
         </div>
