--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://drive.google.com/file/d/11L9ilnYVTxTcy0nYCV3acmxE7Y0082vH/view?usp=drive_link", alt="Logo" class="w-90 h-90" >
+                <img src="https://www.bozano.rs.gov.br/admin/globalarq/noticia/noticia/651_366/1a50d6852ea7ee1a98596383e61f76e3.png", alt="Logo" class="w-90 h-90" >
             </div>
 
         </div>
