--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conselho Tutelar - Proteção à Criança e Adolescente</title>
+    <title>Back_Informatica_Vigia</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -35,7 +35,7 @@
     <header class="bg-white shadow-md">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <img src="https://storage.googleapis.com/ecdt-logo-saida/e7784aa88a356ea4f3b1286e7bb48b12b5729ec99e0e456cf1be4e1db030e827/PREFEITURA-MUNICIPAL-DE-VIGIA-DE-NAZARE.webp", alt="Logo" class="w-120 h-120" >
+                <img src="https://art.pixilart.com/sr29f084cb0bbaws3.png", alt="Logo" class="w-120 h-120" >
             </div>
             <nav class="hidden md:flex space-x-8">
                 <a href="#home" class="text-blue-600 font-medium">Início</a>
