--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
     <!-- Report Section -->
     <section id="report" class="py-16 bg-white">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">Faça uma Denúncia</h2>
+            <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">Solicitar atendimento</h2>
             <div class="max-w-3xl mx-auto bg-blue-50 rounded-xl shadow-md overflow-hidden p-6">
                 
                 <div class="mb-6">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-3">Como solicitar Supoprte?</h3>
-                    <p class="text-gray-600 mb-4">Você pode estar preenchendo o formulario de suporte técnico abaixo e faremos cocntato</p>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-3">Como solicitar Suporte?</h3>
+                    <p class="text-gray-600 mb-4">Você pode estar preenchendo o formulario de suporte técnico abaixo e faremos contato em menos de 2hs</p>
                     <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mb-4">
-                        <p class="text-yellow-700"><strong>Importante:</strong> Caso tenha que desligar forçado seu equipamento que possua HD, e recomendavel que aguarde o atendimento.  <strong>Disque 100</strong> ou para a <strong>Polícia Militar (190)</strong>.</p>
+                        <p class="text-yellow-700"><strong>Importante:</strong> Caso tenha que desligar forçado seu equipamento que possua HD, e recomendavel que aguarde o atendimento.  <strong>Disque 91 983252639</strong> para falar diretamente com o <strong>Técnico</strong>.</p>
                     </div>
                 </div>
 
@@ -86,14 +86,9 @@
                         </div>
                     </div>
 
-                    <div class="flex items-center">
-                        <input id="anonymous" type="checkbox" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
-                        <label for="anonymous" class="ml-2 block text-sm text-gray-700">Manter minha identidade em sigilo (mesmo que tenha fornecido dados)</label>
-                    </div>
-
                     <div class="pt-4">
                         <button type="submit" class="w-full bg-blue-600 text-white py-3 px-6 rounded-md font-medium hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition duration-300">
-                            <i class="fas fa-paper-plane mr-2"></i> Solicitar Retorno
+                            <i class="fas fa-paper-plane mr-2"></i> Enviar
                         </button>
                     </div>
                 </form>
@@ -112,7 +107,6 @@
     local: document.querySelector("#location").value.trim(),
     nome: document.querySelector("#reporterName").value.trim(),
     contato: document.querySelector("#reporterContact").value.trim(),
-    anonimo: document.querySelector("#anonymous").value.trim()
   };
 
   fetch("/api/denuncias", {
