--- a/public/index.html
+++ b/public/index.html
@@ -62,23 +62,23 @@
 
                     <div>
                         <label for="victimInfo" class="block text-sm font-medium text-gray-700 mb-1">Equipamento</label>
-                        <textarea id="victimInfo" rows="3" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Nome (se souber), idade aproximada, características físicas, local onde pode ser encontrada..." required></textarea>
+                        <textarea id="victimInfo" rows="3" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Informe o tipo do sistema computacional" required></textarea>
                     </div>
 
                     <div>
                         <label for="incidentDetails" class="block text-sm font-medium text-gray-700 mb-1">Detalhes do ocorrido*</label>
-                        <textarea id="incidentDetails" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Descreva com detalhes o que aconteceu, quando, onde, frequência, pessoas envolvidas..." required></textarea>
+                        <textarea id="incidentDetails" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Detalhes do ocorrido" required></textarea>
                     </div>
 
                     <div>
                         <label for="location" class="block text-sm font-medium text-gray-700 mb-1">Marca</label>
-                        <input type="text" id="location" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Endereço completo ou ponto de referência" required>
+                        <input type="text" id="location" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Mmarca do Equipamento" required>
                     </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
                             <label for="reporterName" class="block text-sm font-medium text-gray-700 mb-1">Seu nome</label>
-                            <input type="text" id="reporterName" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Pode ser anônimo">
+                            <input type="text" id="reporterName" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Digite seu nome">
                         </div>
                         <div>
                             <label for="reporterContact" class="block text-sm font-medium text-gray-700 mb-1">Contato </label>
