--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 
                     <div>
                         <label for="location" class="block text-sm font-medium text-gray-700 mb-1">Marca</label>
-                        <input type="text" id="location" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Mmarca do Equipamento" required>
+                        <input type="text" id="location" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Marca do Equipamento" required>
                     </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
