--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             <div class="max-w-3xl mx-auto bg-blue-50 rounded-xl shadow-md overflow-hidden p-6">
                 
                 <div class="mb-6">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-3">Como solicitar Suporte?</h3>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-3">Como solicitar atendimento?</h3>
                     <p class="text-gray-600 mb-4">Você pode estar preenchendo o formulario de suporte técnico abaixo e faremos contato em menos de 2hs</p>
                     <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mb-4">
                         <p class="text-yellow-700"><strong>Importante:</strong> Caso tenha que desligar forçado seu equipamento que possua HD, e recomendavel que aguarde o atendimento.  <strong>Disque 91 983252639</strong> para falar diretamente com o <strong>Técnico</strong>.</p>
